Rewrote a couple of tests